--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "markdown-it-container": "^4.0.0",
     "markdown-it-prism": "^2.3.0",
     "postcss": "^8.4.35",
+    "prismjs": "^1.29.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.5",
