--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.17",
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.0.0",
+    "markdown-it-anchor": "^8.6.7",
     "markdown-it-container": "^4.0.0",
     "markdown-it-prism": "^2.3.0",
     "postcss": "^8.4.35",
