--- a/package.json
+++ b/package.json
@@ -10,39 +10,44 @@
     "postbuild": "node -e \"fs.copyFileSync('dist/index.html','dist/404.html')\""
   },
   "dependencies": {
-    "@servicestack/client": "^2.1.1",
-    "@servicestack/vue": "^3.0.88",
-    "@unhead/vue": "^1.8.10",
-    "@vueuse/core": "^10.7.2",
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "@servicestack/client": "^2.1.11",
+    "@servicestack/vue": "^3.0.121",
+    "@unhead/vue": "^2.0.8",
+    "@vueuse/core": "^13.1.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@iconify/vue": "^4.1.1",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
+    "@iconify/vue": "^5.0.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.6",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.6",
+    "@tsconfig/node20": "^20.1.5",
     "@types/js-yaml": "^4.0.9",
-    "@types/markdown-it-container": "^2.0.9",
-    "@types/node": "^20.11.19",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "autoprefixer": "^10.4.17",
+    "@types/markdown-it-container": "^2.0.10",
+    "@types/node": "^22.15.17",
+    "@types/prismjs": "^1.26.5",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "js-yaml": "^4.1.0",
-    "markdown-it": "^14.0.0",
-    "markdown-it-anchor": "^8.6.7",
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.2.0",
     "markdown-it-container": "^4.0.0",
-    "markdown-it-prism": "^2.3.0",
-    "postcss": "^8.4.35",
-    "prismjs": "^1.29.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
-    "unplugin-vue-markdown": "^0.26.0",
-    "unplugin-vue-router": "^0.7.0",
-    "vite": "^5.1.0",
+    "markdown-it-prism": "^3.0.0",
+    "postcss": "^8.5.3",
+    "prismjs": "^1.30.0",
+    "tailwindcss": "^4.1.6",
+    "typescript": "^5.8.3",
+    "unplugin-auto-import": "^19.2.0",
+    "unplugin-vue-components": "^28.5.0",
+    "unplugin-vue-markdown": "^28.3.1",
+    "unplugin-vue-router": "^0.12.0",
+    "vite": "^6.3.5",
     "vite-plugin-press": "^1.0.10",
-    "vite-plugin-vue-layouts": "^0.11.0",
+    "vite-plugin-vue-layouts-next": "^0.1.1",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2.2.10"
   }
 }
